# MediTranslate

./: .env.example  .gitignore  MediTranslate.spec  README.md  build_app.py  download_models.py  pyproject.toml
src/: main.py
src/meditranslate/: main.py
src/meditranslate/data/: Credits.txt  medical_glossary.json
src/meditranslate/services/: ai_assistant.py  analysis_service.py  pdf_service.py  translation_service.py
src/meditranslate/ui/: main_window.py  scanner_tab.py
src/meditranslate/utils/: paths.py
src/services/: ai_assistant.py  analysis_service.py  ocr_service.py  pdf_service.py  translation_service.py
src/ui/: main_window.py  scanner_tab.py
src/utils/: image_processing.py  paths.py
tests/: day1.py  debug_hindi_fonts.py  debug_models.py
